@startuml Diagrama_de_Clases_Sincronizado

' --- CONFIGURACIÓN VISUAL Y ARQUITECTÓNICA ---
skinparam classAttributeIconSize 0
skinparam nodesep 75
skinparam ranksep 75
skinparam linetype ortho
skinparam groupInheritance 2
hide circle

' --- GESTIÓN DE IDENTIDAD Y SEGURIDAD ---
class Usuario {
    + id_usuario: String
    + nombre_completo: String
    + email: String
    - password: String
}

class Vecino {
    + residencia: String
    + saldo_puntos: Float = 0.0
    + ranking: Integer = 0
    + registrar_oferta(datos_repuesto, datos_logistica, lista_fotos)
    + realizar_busqueda(filtros): Oferta[]
    + calificar_ofertante(puntuacion)
}

class Admin {
    + nivel_acceso: Integer = 1
    + vincular_compatibilidad(repuesto, vehiculo)
    + gestionar_catalogo()
    + auditar_transacciones()
}

' Restricción formal de generalización Disjoint asociada a la clase base
note top of Usuario
  {disjoint}
  Un Usuario registrado solo puede 
  pertenecer a una subclase activa (Vecino o Admin)
end note

' --- CATÁLOGO DE REPUESTOS Y VEHÍCULOS (HU 3) ---
class Repuesto {
    + id_repuesto: UUID
    + nombre_pieza: String
    + estado_fisico: String
    + categoria: String
}

class Vehiculo {
    + marca: String
    + modelo: String
    + anio: Integer
}

class MatrizCompatibilidad {
    + {static} validar_match(repuesto_id, vehiculo_id): Boolean
}

' --- EL NÚCLEO OPERACIONAL: MERCADO DE OFERTAS (HU 1, 5, 12) ---
class Oferta {
    + id_inventario: UUID
    + valor_puntos: Float
    + fecha_publicacion: DateTime
    + estado_oferta: Boolean
    + rango_horario: String
    + referencia_ubicacion: Text
    + save()
}

class Fotografia {
    + url_imagen: URL
    + fecha_carga: DateTime
}

class TasacionService <<Service>> {
    + calcularPuntosAlgoritmicamente(datos_tecnicos): Float
}

' --- ECONOMÍA DE PUNTOS E INTEGRIDAD (HU 8) ---
class Transaccion {
    + id_transaccion: UUID
    + fecha_exito: DateTime
    + puntos_transferidos: Float
}

class Historial {
    + es_inalterable: Boolean = True
}

' ===================================================
' ---   DEFINICIÓN DE RELACIONES TÉCNICAS (ORM)   ---
' ===================================================

' 1. Árbol de Herencia Compactado
Usuario <|-- Vecino
Usuario <|-- Admin

' 2. Relaciones del Vecino
Vecino "1" *-- "1" Historial : posee >
Vecino "1" -- "0..5" Oferta : publica >

' 3. Composición de Imágenes y Asociación con Repuestos
Oferta "0..*" o-- "1" Repuesto : contiene >
Oferta "1" *-- "3..5" Fotografia : documentada_con >

' 4. Matriz de Compatibilidad como Clase Intermedia de Asociación M:N
Repuesto "1" -- "0..*" MatrizCompatibilidad : mapea >
Vehiculo "1" -- "0..*" MatrizCompatibilidad : aplica >

' 5. El Pivote Central de la Transacción
Transaccion "0..*" -- "1" Oferta : ejecuta >
Transaccion "0..*" -- "1" Vecino : ofertante >
Transaccion "0..*" -- "1" Vecino : demandante >

' 6. El Historial Comunitario colecciona Transacciones completadas
Historial "1" -- "0..*" Transaccion : registra >

' 7. Dependencia del Servicio de Tasación
Oferta ..> TasacionService : consulta >

' 8. AGREGADO: Relaciones de Control del Administrador (HU 3 / Catálogo)
Admin ..> MatrizCompatibilidad : modifica >
Admin ..> Repuesto : gestiona >

@enduml